updated path to images

--- a/output/archives.html
+++ b/output/archives.html
@@ -48,8 +48,8 @@
 <article>
   <div class="article_text">
     <dl>
-      <dt>Sat 07 November 2015</dt>
-      <dd><a href="/hello-world.html">Hello World</a></dd>
+      <dt>Sun 22 November 2015</dt>
+      <dd><a href="/facebook-wordcloud.html">Creating a wordcloud from Facebook posts</a></dd>
     </dl>
   </div>
 </article>
