--- a/output/facebook-wordcloud.html
+++ b/output/facebook-wordcloud.html
@@ -28,7 +28,7 @@
   <aside>
     <div id="user_meta">
       <a href="">
-        <img src="/theme/images/logo.png" alt="logo">
+        <img src="/images/logo.png" alt="logo">
       </a>
       <h2><a href="">Patrick Boyle</a></h2>
       <p></p>
