add post about updating pelican site

--- a/output/archives.html
+++ b/output/archives.html
@@ -48,6 +48,8 @@
 <article>
   <div class="article_text">
     <dl>
+      <dt>Sat 23 January 2016</dt>
+      <dd><a href="/update-pelican-site.html">How to update a Pelican site on GitHub pages</a></dd>
       <dt>Sun 22 November 2015</dt>
       <dd><a href="/facebook-wordcloud.html">Creating a wordcloud from Facebook posts</a></dd>
     </dl>
