--- a/output/categories.html
+++ b/output/categories.html
@@ -49,6 +49,7 @@
   <div class="article_text">
     <ul>
       <li><a href="/category/python.html">Python</a> (1)</li>
+      <li><a href="/category/python-pelican.html">Python, Pelican</a> (1)</li>
     </ul>
   </div>
 </article>
